fixed the footer alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,7 +8,7 @@
 .App-footer {
   position: fixed;
   bottom: 0;
-  width: 100%;
+  width: 70%;
   text-align: center;
   background-color: #282c34;
   height: flex;
